--- a/src/main/resources/jrxml/member_report.jrxml
+++ b/src/main/resources/jrxml/member_report.jrxml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="member" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3775bef1-ce98-448e-ae75-5a0ac511cf42">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="member" pageWidth="595" pageHeight="842" whenNoDataType="BlankPage" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Empty" isIgnorePagination="true" uuid="3775bef1-ce98-448e-ae75-5a0ac511cf42">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="local postgres"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<queryString>
 		<![CDATA[select * from t_member]]>
 	</queryString>
@@ -37,13 +46,15 @@
 		<property name="com.jaspersoft.studio.field.label" value="operator"/>
 	</field>
 	<background>
-		<band splitType="Stretch"/>
+		<band splitType="Stretch">
+			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.grid.JSSGridBagLayout"/>
+		</band>
 	</background>
 	<title>
 		<band height="49" splitType="Stretch">
 			<staticText>
 				<reportElement x="242" y="13" width="100" height="30" uuid="70f243f9-eacf-4122-a4a2-7a7546d2b8e9"/>
-				<text><![CDATA[member list]]></text>
+				<text><![CDATA[member list 2]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="470" y="0" width="100" height="30" uuid="52796556-db4c-408e-8d2a-93dfb7c462aa"/>
@@ -55,11 +66,9 @@
 			</staticText>
 		</band>
 	</title>
-	<pageHeader>
-		<band height="35" splitType="Stretch"/>
-	</pageHeader>
 	<columnHeader>
 		<band height="30" splitType="Stretch">
+			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<staticText>
 				<reportElement x="0" y="0" width="60" height="30" uuid="5c2d58a3-6fc9-4df7-94ff-32df1f4f65e0">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="378bd653-7d47-41dc-8e0a-f17d6601d5df"/>
@@ -173,10 +182,9 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a44d4c8e-352e-4b7c-8232-047ab05b4171"/>
 				</reportElement>
 				<box topPadding="0" leftPadding="0" bottomPadding="0" rightPadding="0">
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<pen lineWidth="1.0"/>
+					<topPen lineWidth="1.0"/>
+					<rightPen lineWidth="1.0"/>
 				</box>
 				<text><![CDATA[operator]]></text>
 			</staticText>
@@ -283,7 +291,7 @@
 				</box>
 				<textFieldExpression><![CDATA[$F{last}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="445" y="0" width="55" height="30" uuid="e362d972-e793-4dc3-bcd0-4f35e6cb97b2">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="65fc1e34-a731-410c-8647-00f6913cff45"/>
 				</reportElement>
@@ -309,13 +317,4 @@
 			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band height="54" splitType="Stretch"/>
-	</pageFooter>
-	<summary>
-		<band height="42" splitType="Stretch"/>
-	</summary>
 </jasperReport>
